--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.3",
     "cheerio": "^1.0.0-rc.3",
+    "nodemon": "^2.0.4",
     "express": "^4.17.1"
   },
   "devDependencies": {
